Ensure/document that the first parameter to the native messaging host is the origin

This reflects the current implementation, and allows native messaging
hosts to verify their caller when they have authorized multiple
(extension) origins to invoke the native messaging host.

On Windows, the first argument was --parent-window=integer,
but to make the use of the origin parameter easier, the origin parameter
is first, just like other platforms (Linux/OS X).

BUG=651496
R=sergeyu@chromium.org

Review-Url: https://codereview.chromium.org/2271143002
Cr-Commit-Position: refs/heads/master@{#423169}

Former-commit-id: f048ff5342719462f88ff146b8ac01346f320da8